--- a/public/index.html
+++ b/public/index.html
@@ -494,6 +494,11 @@
           <span aria-label="Expenses" title="Expenses" class="text-base align-middle">💰</span>
           <span class="text-[10px] mt-1 text-slate-500 font-medium">Expenses</span>
         </button>
+        <button onclick="switchTab('personal')" id="tab-personal"
+          class="tab-btn flex-1 flex flex-col items-center justify-center px-1 py-2 rounded-lg font-medium text-xl whitespace-nowrap transition-all bg-slate-100 hover:bg-slate-200">
+          <span aria-label="Personal" title="Personal" class="text-base align-middle">🧾</span>
+          <span class="text-[10px] mt-1 text-slate-500 font-medium">Personal</span>
+        </button>
           <button onclick="switchTab('products')" id="tab-products"
           class="tab-btn flex-1 flex flex-col items-center justify-center px-1 py-2 rounded-lg font-medium text-xl whitespace-nowrap transition-all bg-slate-100 hover:bg-slate-200">
           <span aria-label="Products" title="Products" class="text-base align-middle">📦</span>
@@ -503,6 +508,163 @@
     </nav><!-- Main Content -->
     <main class="flex-1 overflow-auto p-4 scrollbar-thin">
       <div class="w-full flex flex-col gap-3 pb-32 px-2 pt-2"><!-- Dashboard Tab, pb-32 for nav/action bar space -->
+              <!-- Personal Expenses Tab -->
+              <div id="content-personal" class="tab-content hidden animate-fade-in">
+                      <!-- Personal Expense Modal -->
+                      <div id="personal-expense-modal" class="fixed inset-0 modal-backdrop hidden z-50 flex items-center justify-center p-4">
+                        <div class="bg-white rounded-xl shadow-2xl w-full max-w-md animate-fade-in my-8">
+                          <form id="personal-expense-form" class="p-6 space-y-4">
+                            <h3 class="text-lg font-bold mb-2" id="personal-expense-modal-title">Add Personal Expense</h3>
+                            <div>
+                              <label class="block text-sm font-medium text-slate-700 mb-1">Name</label>
+                              <input type="text" id="personal-expense-name" class="input-field w-full border px-3 py-2 rounded-lg" required />
+                            </div>
+                            <div>
+                              <label class="block text-sm font-medium text-slate-700 mb-1">Amount</label>
+                              <input type="number" id="personal-expense-amount" class="input-field w-full border px-3 py-2 rounded-lg" min="0" step="0.01" required />
+                            </div>
+                            <div>
+                              <label class="block text-sm font-medium text-slate-700 mb-1">Due Date</label>
+                              <input type="date" id="personal-expense-due" class="input-field w-full border px-3 py-2 rounded-lg" />
+                            </div>
+                            <div class="flex items-center gap-4">
+                              <label class="flex items-center gap-2">
+                                <input type="checkbox" id="personal-expense-include" class="form-checkbox" checked />
+                                <span class="text-sm">Include in Expenses</span>
+                              </label>
+                              <label class="flex items-center gap-2">
+                                <input type="checkbox" id="personal-expense-settled" class="form-checkbox" />
+                                <span class="text-sm">Settled</span>
+                              </label>
+                            </div>
+                            <div class="flex justify-end gap-2 mt-4">
+                              <button type="button" onclick="closePersonalExpenseModal()" class="px-4 py-2 rounded-lg bg-slate-200 hover:bg-slate-300 text-slate-700 font-medium">Cancel</button>
+                              <button type="submit" class="px-4 py-2 rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-medium">Save</button>
+                            </div>
+                          </form>
+                        </div>
+                      </div>
+                // --- Personal Expenses Modal Logic ---
+                let editingPersonalExpenseId = null;
+                let personalExpenses = [];
+
+                function openPersonalExpenseModal(id = null) {
+                  const modal = document.getElementById('personal-expense-modal');
+                  const form = document.getElementById('personal-expense-form');
+                  document.getElementById('personal-expense-modal-title').textContent = id ? 'Edit Personal Expense' : 'Add Personal Expense';
+                  if (id) {
+                    const exp = personalExpenses.find(e => e.id === id);
+                    if (exp) {
+                      document.getElementById('personal-expense-name').value = exp.name;
+                      document.getElementById('personal-expense-amount').value = exp.amount;
+                      document.getElementById('personal-expense-due').value = exp.dueDate || '';
+                      document.getElementById('personal-expense-include').checked = !!exp.include;
+                      document.getElementById('personal-expense-settled').checked = !!exp.settled;
+                      editingPersonalExpenseId = id;
+                    }
+                  } else {
+                    form.reset();
+                    document.getElementById('personal-expense-include').checked = true;
+                    document.getElementById('personal-expense-settled').checked = false;
+                    editingPersonalExpenseId = null;
+                  }
+                  modal.classList.remove('hidden');
+                }
+
+                function closePersonalExpenseModal() {
+                  document.getElementById('personal-expense-modal').classList.add('hidden');
+                  editingPersonalExpenseId = null;
+                }
+
+                document.getElementById('personal-expense-form').onsubmit = function(e) {
+                  e.preventDefault();
+                  const name = document.getElementById('personal-expense-name').value.trim();
+                  const amount = parseFloat(document.getElementById('personal-expense-amount').value);
+                  const dueDate = document.getElementById('personal-expense-due').value;
+                  const include = document.getElementById('personal-expense-include').checked;
+                  const settled = document.getElementById('personal-expense-settled').checked;
+                  if (!name || isNaN(amount)) return;
+                  if (editingPersonalExpenseId) {
+                    // Edit
+                    const idx = personalExpenses.findIndex(e => e.id === editingPersonalExpenseId);
+                    if (idx !== -1) {
+                      personalExpenses[idx] = { ...personalExpenses[idx], name, amount, dueDate, include, settled };
+                    }
+                  } else {
+                    // Add
+                    personalExpenses.push({ id: Date.now(), name, amount, dueDate, include, settled });
+                  }
+                  renderPersonalExpenses();
+                  closePersonalExpenseModal();
+                };
+
+                function renderPersonalExpenses() {
+                  const tbody = document.getElementById('personal-expenses-table');
+                  if (!personalExpenses.length) {
+                    tbody.innerHTML = '<tr><td colspan="6" class="text-center py-8 text-slate-400">No personal expenses yet.</td></tr>';
+                    return;
+                  }
+                  tbody.innerHTML = personalExpenses.map(exp => `
+                    <tr>
+                      <td class="px-4 py-2">${escapeHtml(exp.name)}</td>
+                      <td class="px-4 py-2">₹${exp.amount.toLocaleString()}</td>
+                      <td class="px-4 py-2">${exp.dueDate ? formatDate(exp.dueDate) : '-'}</td>
+                      <td class="px-4 py-2 text-center">
+                        <button onclick="togglePersonalExpenseInclude(${exp.id})" class="rounded px-2 py-1 ${exp.include ? 'bg-green-200 text-green-800' : 'bg-slate-200 text-slate-500'}">${exp.include ? 'Included' : 'Not Included'}</button>
+                      </td>
+                      <td class="px-4 py-2 text-center">
+                        <button onclick="togglePersonalExpenseSettled(${exp.id})" class="rounded px-2 py-1 ${exp.settled ? 'bg-blue-200 text-blue-800' : 'bg-slate-200 text-slate-500'}">${exp.settled ? 'Settled' : 'Unsettled'}</button>
+                      </td>
+                      <td class="px-4 py-2 text-center">
+                        <button onclick="openPersonalExpenseModal(${exp.id})" class="text-blue-600 hover:underline mr-2">Edit</button>
+                        <button onclick="deletePersonalExpense(${exp.id})" class="text-red-600 hover:underline">Delete</button>
+                      </td>
+                    </tr>
+                  `).join('');
+                }
+
+                function togglePersonalExpenseInclude(id) {
+                  const exp = personalExpenses.find(e => e.id === id);
+                  if (exp) { exp.include = !exp.include; renderPersonalExpenses(); }
+                }
+                function togglePersonalExpenseSettled(id) {
+                  const exp = personalExpenses.find(e => e.id === id);
+                  if (exp) { exp.settled = !exp.settled; renderPersonalExpenses(); }
+                }
+                function deletePersonalExpense(id) {
+                  personalExpenses = personalExpenses.filter(e => e.id !== id);
+                  renderPersonalExpenses();
+                }
+
+                // Initial render
+                renderPersonalExpenses();
+                <div class="flex flex-wrap items-center justify-between gap-3 mb-4">
+                  <h2 class="text-xl font-bold">🧾 Personal Expenses</h2>
+                  <button id="btn-add-personal" onclick="openPersonalExpenseModal()"
+                    class="btn-primary text-white px-4 py-2 rounded-lg font-medium flex items-center gap-2">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+                    </svg> Add Personal Expense
+                  </button>
+                </div>
+                <div class="overflow-x-auto rounded-lg shadow border border-slate-200">
+                  <table class="min-w-full divide-y divide-slate-200">
+                    <thead class="bg-slate-50">
+                      <tr>
+                        <th class="px-4 py-2 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Name</th>
+                        <th class="px-4 py-2 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Amount</th>
+                        <th class="px-4 py-2 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Due Date</th>
+                        <th class="px-4 py-2 text-center text-xs font-medium text-slate-500 uppercase tracking-wider">Include in Expenses</th>
+                        <th class="px-4 py-2 text-center text-xs font-medium text-slate-500 uppercase tracking-wider">Settled</th>
+                        <th class="px-4 py-2 text-center text-xs font-medium text-slate-500 uppercase tracking-wider">Actions</th>
+                      </tr>
+                    </thead>
+                    <tbody id="personal-expenses-table">
+                      <tr><td colspan="6" class="text-center py-8 text-slate-400">No personal expenses yet.</td></tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
         <div id="content-dashboard" class="tab-content animate-fade-in">
           <!-- Notification Permission Banner -->
           <div id="notification-banner" class="bg-blue-50 border border-blue-200 rounded-lg p-4 mb-4 hidden">
