--- a/public/index.html
+++ b/public/index.html
@@ -466,7 +466,7 @@
       </div>
     </header><!-- Navigation Tabs -->
     <nav class="bg-white border-b border-slate-200 px-4 flex-shrink-0" style="position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: 100vw; max-width: 420px; z-index: 50;">
-      <div class="w-full flex gap-1 overflow-x-auto scrollbar-thin py-2 justify-between">
+      <div class="w-full flex flex-row gap-1 overflow-x-auto scrollbar-thin py-2 justify-between">
           <button onclick="switchTab('dashboard')" id="tab-dashboard"
           class="tab-btn tab-active flex-1 flex flex-col items-center justify-center px-1 py-2 rounded-lg font-medium text-xl whitespace-nowrap transition-all">
           <span aria-label="Dashboard" title="Dashboard" class="text-base align-middle">📊</span>
