--- a/public/index.html
+++ b/public/index.html
@@ -508,6 +508,16 @@
     </nav><!-- Main Content -->
     <main class="flex-1 overflow-auto p-4 scrollbar-thin">
       <div class="w-full flex flex-col gap-3 pb-32 px-2 pt-2"><!-- Dashboard Tab, pb-32 for nav/action bar space -->
+                      <!-- Dashboard Stats Row -->
+                      <div id="content-dashboard" class="tab-content animate-fade-in">
+                        <div class="flex flex-col gap-3 w-full">
+                          <div class="stat-card rounded-xl p-4 text-white shadow-lg cursor-pointer hover:opacity-90 transition-opacity">
+                            <div class="text-xs font-medium">Total Invested</div>
+                            <div id="stat-invested" class="text-2xl font-bold">₹0</div>
+                          </div>
+                          <!-- Add other stat cards here as needed -->
+                        </div>
+                      </div>
               <!-- Personal Expenses Tab -->
               <div id="content-personal" class="tab-content hidden animate-fade-in">
                       <!-- Personal Expense Modal -->
