--- a/public/index.html
+++ b/public/index.html
@@ -508,127 +508,42 @@
     </nav><!-- Main Content -->
     <main class="flex-1 overflow-auto p-4 scrollbar-thin">
       <div class="w-full flex flex-col gap-3 pb-32 px-2 pt-2"><!-- Dashboard Tab, pb-32 for nav/action bar space -->
-                      <!-- Dashboard Stats Row -->
-                      <div id="content-dashboard" class="tab-content animate-fade-in">
-                        <div class="flex flex-col gap-3 w-full">
-                          <div class="stat-card rounded-xl p-4 text-white shadow-lg cursor-pointer hover:opacity-90 transition-opacity">
-                            <div class="text-xs font-medium">Total Invested</div>
-                            <div id="stat-invested" class="text-2xl font-bold">₹0</div>
-                          </div>
-                          <!-- Add other stat cards here as needed -->
-                        </div>
-                      </div>
-              <!-- Personal Expenses Tab -->
-              <div id="content-personal" class="tab-content hidden animate-fade-in">
-                      <!-- Personal Expense Modal -->
-                      <div id="personal-expense-modal" class="fixed inset-0 modal-backdrop hidden z-50 flex items-center justify-center p-4">
-                        <div class="bg-white rounded-xl shadow-2xl w-full max-w-md animate-fade-in my-8">
-                          <form id="personal-expense-form" class="p-6 space-y-4">
-                            <h3 class="text-lg font-bold mb-2" id="personal-expense-modal-title">Add Personal Expense</h3>
-                            <div>
-                              <label class="block text-sm font-medium text-slate-700 mb-1">Name</label>
-                              <input type="text" id="personal-expense-name" class="input-field w-full border px-3 py-2 rounded-lg" required />
-                            </div>
-                            <div>
-                              <label class="block text-sm font-medium text-slate-700 mb-1">Amount</label>
-                              <input type="number" id="personal-expense-amount" class="input-field w-full border px-3 py-2 rounded-lg" min="0" step="0.01" required />
-                            </div>
-                            <div>
-                              <label class="block text-sm font-medium text-slate-700 mb-1">Due Date</label>
-                              <input type="date" id="personal-expense-due" class="input-field w-full border px-3 py-2 rounded-lg" />
-                            </div>
-                            <div class="flex items-center gap-4">
-                              <label class="flex items-center gap-2">
-                                <input type="checkbox" id="personal-expense-include" class="form-checkbox" checked />
-                                <span class="text-sm">Include in Expenses</span>
-                              </label>
-                              <label class="flex items-center gap-2">
-                                <input type="checkbox" id="personal-expense-settled" class="form-checkbox" />
-                                <span class="text-sm">Settled</span>
-                              </label>
-                            </div>
-                            <div class="flex justify-end gap-2 mt-4">
-                              <button type="button" onclick="closePersonalExpenseModal()" class="px-4 py-2 rounded-lg bg-slate-200 hover:bg-slate-300 text-slate-700 font-medium">Cancel</button>
-                              <button type="submit" class="px-4 py-2 rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-medium">Save</button>
-                            </div>
-                          </form>
-                        </div>
-                      </div>
-                // --- Personal Expenses Modal Logic (DB Integrated) ---
-                let editingPersonalExpenseId = null;
-                let personalExpenses = [];
-
-                async function loadPersonalExpenses() {
-                  try {
-                    const res = await api.getData('personal_expense');
-                    personalExpenses = (res.data || []).map(e => ({
-                      id: e._id,
-                      name: e.name,
-                      amount: e.amount,
-                      dueDate: e.dueDate,
-                      include: e.include,
-                      settled: e.settled
-                    }));
-                    renderPersonalExpenses();
-                  } catch (e) {
-                    showToast('Failed to load personal expenses', 'error');
-                  }
-                }
-
-                function openPersonalExpenseModal(id = null) {
-                  const modal = document.getElementById('personal-expense-modal');
-                  const form = document.getElementById('personal-expense-form');
-                  document.getElementById('personal-expense-modal-title').textContent = id ? 'Edit Personal Expense' : 'Add Personal Expense';
-                  if (id) {
-                    const exp = personalExpenses.find(e => e.id === id);
-                    if (exp) {
-                      document.getElementById('personal-expense-name').value = exp.name;
-                      document.getElementById('personal-expense-amount').value = exp.amount;
-                      document.getElementById('personal-expense-due').value = exp.dueDate || '';
-                      document.getElementById('personal-expense-include').checked = !!exp.include;
-                      document.getElementById('personal-expense-settled').checked = !!exp.settled;
-                      editingPersonalExpenseId = id;
-                    }
-                  } else {
-                    form.reset();
-                    document.getElementById('personal-expense-include').checked = true;
-                    document.getElementById('personal-expense-settled').checked = false;
-                    editingPersonalExpenseId = null;
-                  }
-                  modal.classList.remove('hidden');
-                }
-
-                function closePersonalExpenseModal() {
-                  document.getElementById('personal-expense-modal').classList.add('hidden');
-                  editingPersonalExpenseId = null;
-                }
-
-                document.getElementById('personal-expense-form').onsubmit = async function(e) {
-                  e.preventDefault();
-                  const name = document.getElementById('personal-expense-name').value.trim();
-                  const amount = parseFloat(document.getElementById('personal-expense-amount').value);
-                  const dueDate = document.getElementById('personal-expense-due').value;
-                  const include = document.getElementById('personal-expense-include').checked;
-                  const settled = document.getElementById('personal-expense-settled').checked;
-                  if (!name || isNaN(amount)) return;
-                  try {
-                    if (editingPersonalExpenseId) {
-                      // Edit
-                      await api.updateRecord(editingPersonalExpenseId, { type: 'personal_expense', name, amount, dueDate, include, settled });
-                    } else {
-                      // Add
-                      await api.createRecord({ type: 'personal_expense', name, amount, dueDate, include, settled });
-                    }
-                    await loadPersonalExpenses();
-                    closePersonalExpenseModal();
-                  } catch (err) {
-                    showToast('Failed to save personal expense', 'error');
-                  }
-                };
-                            </div>
-                          </form>
-                        </div>
-                      </div>
+        <div id="content-dashboard" class="tab-content animate-fade-in">
+          <div class="flex flex-col gap-3 w-full">
+            <div class="stat-card rounded-xl p-4 text-white shadow-lg cursor-pointer hover:opacity-90 transition-opacity">
+              <div class="text-xs font-medium">Total Invested</div>
+              <div id="stat-invested" class="text-2xl font-bold">₹0</div>
+            </div>
+            <div id="stat-revenue" class="text-2xl font-bold">₹0</div>
+            <div id="profit-loss-card" class="profit-card rounded-xl p-4 text-white shadow mb-3">
+              <div class="text-sm opacity-80 mb-1">Profit/Loss</div>
+              <div id="stat-profit" class="text-2xl font-bold">₹0</div>
+            </div>
+            <div class="pending-card rounded-xl p-4 text-white shadow mb-3">
+              <div class="text-sm opacity-80 mb-1">Pending Collection</div>
+              <div id="stat-pending" class="text-2xl font-bold">₹0</div>
+            </div>
+            <!-- Cost Breakdown, Material Usage, Pending Orders, etc. -->
+            <div class="card-gradient rounded-xl shadow-lg p-4 mb-6 border border-slate-200">
+              <h2 class="text-lg font-bold mb-4 flex items-center gap-2"><span>💵</span> Cost Breakdown</h2>
+              <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                <div class="bg-purple-50 border border-purple-200 rounded-lg p-3">
+                  <div class="text-sm text-purple-600 mb-1">Raw Materials</div>
+                  <div class="text-2xl font-bold text-purple-700" id="breakdown-raw-materials">₹0</div>
+                </div>
+                <div class="bg-orange-50 border border-orange-200 rounded-lg p-3">
+                  <div class="text-sm text-orange-600 mb-1">Wages & Expenses</div>
+                  <div class="text-2xl font-bold text-orange-700" id="breakdown-wages">₹0</div>
+                </div>
+                <div class="bg-blue-50 border border-blue-200 rounded-lg p-3">
+                  <div class="text-sm text-blue-600 mb-1">Other Investments</div>
+                  <div class="text-2xl font-bold text-blue-700" id="breakdown-investments">₹0</div>
+                </div>
+              </div>
+            </div>
+            <!-- Add other dashboard cards as needed -->
+          </div>
+        </div>
               <div id="stat-revenue" class="text-2xl font-bold">
                 ₹0
               </div>
