--- a/public/index.html
+++ b/public/index.html
@@ -508,42 +508,47 @@
     </nav><!-- Main Content -->
     <main class="flex-1 overflow-auto p-4 scrollbar-thin">
       <div class="w-full flex flex-col gap-3 pb-32 px-2 pt-2"><!-- Dashboard Tab, pb-32 for nav/action bar space -->
-        <div id="content-dashboard" class="tab-content animate-fade-in">
-          <div class="flex flex-col gap-3 w-full">
-            <div class="stat-card rounded-xl p-4 text-white shadow-lg cursor-pointer hover:opacity-90 transition-opacity">
-              <div class="text-xs font-medium">Total Invested</div>
-              <div id="stat-invested" class="text-2xl font-bold">₹0</div>
-            </div>
-            <div id="stat-revenue" class="text-2xl font-bold">₹0</div>
-            <div id="profit-loss-card" class="profit-card rounded-xl p-4 text-white shadow mb-3">
-              <div class="text-sm opacity-80 mb-1">Profit/Loss</div>
-              <div id="stat-profit" class="text-2xl font-bold">₹0</div>
-            </div>
-            <div class="pending-card rounded-xl p-4 text-white shadow mb-3">
-              <div class="text-sm opacity-80 mb-1">Pending Collection</div>
-              <div id="stat-pending" class="text-2xl font-bold">₹0</div>
-            </div>
-            <!-- Cost Breakdown, Material Usage, Pending Orders, etc. -->
-            <div class="card-gradient rounded-xl shadow-lg p-4 mb-6 border border-slate-200">
-              <h2 class="text-lg font-bold mb-4 flex items-center gap-2"><span>💵</span> Cost Breakdown</h2>
-              <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                <div class="bg-purple-50 border border-purple-200 rounded-lg p-3">
-                  <div class="text-sm text-purple-600 mb-1">Raw Materials</div>
-                  <div class="text-2xl font-bold text-purple-700" id="breakdown-raw-materials">₹0</div>
+          <div class="flex justify-center items-start w-full min-h-[80vh] pb-32">
+            <div class="w-full max-w-xl bg-white rounded-2xl shadow-lg p-6 flex flex-col gap-6 mt-8">
+              <div id="content-dashboard" class="tab-content animate-fade-in flex flex-col gap-6">
+                <div class="stat-card rounded-xl p-4 text-white shadow-lg bg-blue-600 flex flex-col items-center">
+                  <div class="text-xs font-medium">Total Invested</div>
+                  <div id="stat-invested" class="text-2xl font-bold">₹0</div>
                 </div>
-                <div class="bg-orange-50 border border-orange-200 rounded-lg p-3">
-                  <div class="text-sm text-orange-600 mb-1">Wages & Expenses</div>
-                  <div class="text-2xl font-bold text-orange-700" id="breakdown-wages">₹0</div>
+                <div class="stat-card rounded-xl p-4 text-white shadow-lg bg-green-600 flex flex-col items-center">
+                  <div class="text-xs font-medium">Total Revenue</div>
+                  <div id="stat-revenue" class="text-2xl font-bold">₹0</div>
                 </div>
-                <div class="bg-blue-50 border border-blue-200 rounded-lg p-3">
-                  <div class="text-sm text-blue-600 mb-1">Other Investments</div>
-                  <div class="text-2xl font-bold text-blue-700" id="breakdown-investments">₹0</div>
+                <div id="profit-loss-card" class="profit-card rounded-xl p-4 text-white shadow bg-purple-600 flex flex-col items-center">
+                  <div class="text-sm opacity-80 mb-1">Profit/Loss</div>
+                  <div id="stat-profit" class="text-2xl font-bold">₹0</div>
                 </div>
+                <div class="pending-card rounded-xl p-4 text-white shadow bg-orange-600 flex flex-col items-center">
+                  <div class="text-sm opacity-80 mb-1">Pending Collection</div>
+                  <div id="stat-pending" class="text-2xl font-bold">₹0</div>
+                </div>
+                <!-- Cost Breakdown, Material Usage, Pending Orders, etc. -->
+                <div class="card-gradient rounded-xl shadow-lg p-4 border border-slate-200 bg-slate-50">
+                  <h2 class="text-lg font-bold mb-4 flex items-center gap-2 text-slate-800"><span>💵</span> Cost Breakdown</h2>
+                  <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                    <div class="bg-purple-50 border border-purple-200 rounded-lg p-3">
+                      <div class="text-sm text-purple-600 mb-1">Raw Materials</div>
+                      <div class="text-2xl font-bold text-purple-700" id="breakdown-raw-materials">₹0</div>
+                    </div>
+                    <div class="bg-orange-50 border border-orange-200 rounded-lg p-3">
+                      <div class="text-sm text-orange-600 mb-1">Wages & Expenses</div>
+                      <div class="text-2xl font-bold text-orange-700" id="breakdown-wages">₹0</div>
+                    </div>
+                    <div class="bg-blue-50 border border-blue-200 rounded-lg p-3">
+                      <div class="text-sm text-blue-600 mb-1">Other Investments</div>
+                      <div class="text-2xl font-bold text-blue-700" id="breakdown-investments">₹0</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Add other dashboard cards as needed -->
               </div>
             </div>
-            <!-- Add other dashboard cards as needed -->
           </div>
-        </div>
               <div id="stat-revenue" class="text-2xl font-bold">
                 ₹0
               </div>
