--- a/public/index.html
+++ b/public/index.html
@@ -368,7 +368,36 @@
 </head>
 <body class="h-full min-h-screen w-full flex items-center justify-center bg-slate-100 text-slate-800" style="min-height: 100vh;">
   <!-- Reference Screenshot for Developers: <img src='/IMG_7938.png' alt='Mobile Dashboard Reference' style='max-width: 100%; display: none;' /> -->
-  <div id="app" class="flex flex-col bg-white w-full max-w-[420px] min-h-screen h-full shadow-lg overflow-hidden" style="height: 100vh;">
+  <div id="app" class="flex flex-row min-h-screen h-full w-full max-w-full bg-white shadow-lg overflow-hidden">
+        <!-- Sidebar -->
+        <aside class="hidden md:flex flex-col bg-gradient-to-b from-blue-900 to-blue-700 text-white w-64 min-w-[220px] max-w-[260px] h-full p-6 gap-6 shadow-lg">
+          <div class="flex flex-col items-center gap-4">
+            <h2 class="text-2xl font-bold tracking-tight">Shrimata</h2>
+            <span class="text-sm opacity-80">Business Manager Pro</span>
+          </div>
+          <nav class="flex flex-col gap-2 mt-8">
+            <button onclick="switchTab('dashboard')" id="tab-dashboard" class="tab-btn tab-active flex items-center gap-2 px-4 py-2 rounded-lg font-medium text-lg transition-all">
+              <span>📊</span> Dashboard
+            </button>
+            <button onclick="switchTab('orders')" id="tab-orders" class="tab-btn flex items-center gap-2 px-4 py-2 rounded-lg font-medium text-lg transition-all">
+              <span>📋</span> Orders
+            </button>
+            <button onclick="switchTab('attendance')" id="tab-attendance" class="tab-btn flex items-center gap-2 px-4 py-2 rounded-lg font-medium text-lg transition-all">
+              <span>👥</span> Attendance
+            </button>
+            <button onclick="switchTab('workers')" id="tab-workers" class="tab-btn flex items-center gap-2 px-4 py-2 rounded-lg font-medium text-lg transition-all">
+              <span>👷</span> Production
+            </button>
+            <button onclick="switchTab('investments')" id="tab-investments" class="tab-btn flex items-center gap-2 px-4 py-2 rounded-lg font-medium text-lg transition-all">
+              <span>💰</span> Expenses
+            </button>
+            <button onclick="switchTab('products')" id="tab-products" class="tab-btn flex items-center gap-2 px-4 py-2 rounded-lg font-medium text-lg transition-all">
+              <span>📦</span> Products
+            </button>
+          </nav>
+        </aside>
+        <!-- Main Content -->
+        <div class="flex-1 flex flex-col min-w-0">
     <script>
       // Set user info in header and restrict tabs for 'user' role
       document.addEventListener('DOMContentLoaded', function() {
@@ -507,48 +536,45 @@
       </div>
     </nav><!-- Main Content -->
     <main class="flex-1 overflow-auto p-4 scrollbar-thin">
-      <div class="w-full flex flex-col gap-3 pb-32 px-2 pt-2"><!-- Dashboard Tab, pb-32 for nav/action bar space -->
-          <div class="flex justify-center items-start w-full min-h-[80vh] pb-32">
-            <div class="w-full max-w-xl bg-white rounded-2xl shadow-lg p-6 flex flex-col gap-6 mt-8">
-              <div id="content-dashboard" class="tab-content animate-fade-in flex flex-col gap-6">
-                <div class="stat-card rounded-xl p-4 text-white shadow-lg bg-blue-600 flex flex-col items-center">
-                  <div class="text-xs font-medium">Total Invested</div>
-                  <div id="stat-invested" class="text-2xl font-bold">₹0</div>
-                </div>
-                <div class="stat-card rounded-xl p-4 text-white shadow-lg bg-green-600 flex flex-col items-center">
-                  <div class="text-xs font-medium">Total Revenue</div>
-                  <div id="stat-revenue" class="text-2xl font-bold">₹0</div>
-                </div>
-                <div id="profit-loss-card" class="profit-card rounded-xl p-4 text-white shadow bg-purple-600 flex flex-col items-center">
-                  <div class="text-sm opacity-80 mb-1">Profit/Loss</div>
-                  <div id="stat-profit" class="text-2xl font-bold">₹0</div>
-                </div>
-                <div class="pending-card rounded-xl p-4 text-white shadow bg-orange-600 flex flex-col items-center">
-                  <div class="text-sm opacity-80 mb-1">Pending Collection</div>
-                  <div id="stat-pending" class="text-2xl font-bold">₹0</div>
-                </div>
-                <!-- Cost Breakdown, Material Usage, Pending Orders, etc. -->
-                <div class="card-gradient rounded-xl shadow-lg p-4 border border-slate-200 bg-slate-50">
-                  <h2 class="text-lg font-bold mb-4 flex items-center gap-2 text-slate-800"><span>💵</span> Cost Breakdown</h2>
-                  <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                    <div class="bg-purple-50 border border-purple-200 rounded-lg p-3">
-                      <div class="text-sm text-purple-600 mb-1">Raw Materials</div>
-                      <div class="text-2xl font-bold text-purple-700" id="breakdown-raw-materials">₹0</div>
-                    </div>
-                    <div class="bg-orange-50 border border-orange-200 rounded-lg p-3">
-                      <div class="text-sm text-orange-600 mb-1">Wages & Expenses</div>
-                      <div class="text-2xl font-bold text-orange-700" id="breakdown-wages">₹0</div>
-                    </div>
-                    <div class="bg-blue-50 border border-blue-200 rounded-lg p-3">
-                      <div class="text-sm text-blue-600 mb-1">Other Investments</div>
-                      <div class="text-2xl font-bold text-blue-700" id="breakdown-investments">₹0</div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Add other dashboard cards as needed -->
+      <div class="w-full max-w-7xl mx-auto flex flex-col gap-8 pb-32 px-2 pt-6">
+        <div id="content-dashboard" class="tab-content animate-fade-in">
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="stat-card rounded-xl p-6 text-white shadow-lg bg-blue-600 flex flex-col items-center">
+              <div class="text-xs font-medium">Total Invested</div>
+              <div id="stat-invested" class="text-2xl font-bold">₹0</div>
+            </div>
+            <div class="stat-card rounded-xl p-6 text-white shadow-lg bg-green-600 flex flex-col items-center">
+              <div class="text-xs font-medium">Total Revenue</div>
+              <div id="stat-revenue" class="text-2xl font-bold">₹0</div>
+            </div>
+            <div id="profit-loss-card" class="profit-card rounded-xl p-6 text-white shadow flex flex-col items-center">
+              <div class="text-sm opacity-80 mb-1">Profit/Loss</div>
+              <div id="stat-profit" class="text-2xl font-bold">₹0</div>
+            </div>
+            <div class="pending-card rounded-xl p-6 text-white shadow flex flex-col items-center md:col-span-2 lg:col-span-1">
+              <div class="text-sm opacity-80 mb-1">Pending Collection</div>
+              <div id="stat-pending" class="text-2xl font-bold">₹0</div>
+            </div>
+          </div>
+          <!-- Cost Breakdown, Material Usage, Pending Orders, etc. -->
+          <div class="card-gradient rounded-xl shadow-lg p-6 border border-slate-200 bg-slate-50 mt-8">
+            <h2 class="text-lg font-bold mb-4 flex items-center gap-2 text-slate-800"><span>💵</span> Cost Breakdown</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+              <div class="bg-purple-50 border border-purple-200 rounded-lg p-3">
+                <div class="text-sm text-purple-600 mb-1">Raw Materials</div>
+                <div class="text-2xl font-bold text-purple-700" id="breakdown-raw-materials">₹0</div>
+              </div>
+              <div class="bg-orange-50 border border-orange-200 rounded-lg p-3">
+                <div class="text-sm text-orange-600 mb-1">Wages & Expenses</div>
+                <div class="text-2xl font-bold text-orange-700" id="breakdown-wages">₹0</div>
+              </div>
+              <div class="bg-blue-50 border border-blue-200 rounded-lg p-3">
+                <div class="text-sm text-blue-600 mb-1">Other Investments</div>
+                <div class="text-2xl font-bold text-blue-700" id="breakdown-investments">₹0</div>
               </div>
             </div>
           </div>
+        </div>
               <div id="stat-revenue" class="text-2xl font-bold">
                 ₹0
               </div>
