--- a/public/index.html
+++ b/public/index.html
@@ -312,10 +312,21 @@
       }
 
       #receipt-content {
-        max-width: 800px !important;
+        width: 794px !important; /* A4 width at 96dpi */
+        height: 1123px !important; /* A4 height at 96dpi */
+        max-width: 100vw;
+        max-height: 90vh;
         margin: 0 auto !important;
-        padding: 20px !important;
-        transform: scale(1) !important;
+        padding: 40px 32px !important;
+        background: #fff !important;
+        box-shadow: 0 0 8px 0 rgba(0,0,0,0.08);
+        border-radius: 12px;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: stretch;
+        position: relative;
       }
 
       #receipt-content img {
